# server/api/controllers/users.js
@@ -4,23 +4,24 @@ let usersService = require('../../services/users');
 let commonService = require('../../services/common');
 
 module.exports = {
-  getUsersNoSql: getUsersNoSql,
-	getUsersSql: getUsersSql,
-	getUser: getUser
+  userCreate: userCreate,
+  getUsers: getUsers,
+	getUser: getUser,
+	updateUser: updateUser
 };
 
-function getUsersNoSql(req, res, next) {
-  usersService.getUsersNoSqlAsync()
-		.then((result) => {
-			res.json(commonService.resJson('Users fetched successfully With Sequelize.', result));
-		})
-		.catch(next);
+function userCreate(req, res, next) {
+  usersService.createUserAsync(req.body)
+    .then((result) => {
+      res.json(commonService.resJson('User added successfully.', result));
+    })
+    .catch(next);
 }
 
-function getUsersSql(req, res, next) {
-  usersService.getUsersSqlAsync()
+function getUsers(req, res, next) {
+  usersService.getUsersAsync()
 		.then((result) => {
-			res.json(commonService.resJson('Users fetched successfully With Sequelize and SQL Query.', result));
+			res.json(commonService.resJson('Users fetched successfully.', result));
 		})
 		.catch(next);
 }
@@ -30,6 +31,15 @@ function getUser(req, res, next) {
   usersService.getUserAsync(userId)
     .then((result) => {
       res.json(commonService.resJson('User fetched successfully.', result));
+    })
+    .catch(next);
+}
+
+function updateUser(req, res, next) {
+	let userId = req.swagger.params.userId.value;
+  usersService.updateUserAsync(userId, req.body)
+    .then((result) => {
+      res.json(commonService.resJson('User updated successfully.', result));
     })
     .catch(next);
 }
