# server/api/swagger/swagger.yaml
@@ -17,31 +17,81 @@ consumes:
 # format of the responses to the client (Accepts)
 produces:
   - application/json
+# Security definition
+securityDefinitions:
+    eternus_jwt_bearer:
+      type: apiKey
+      name: Authorization
+      in: header
 paths:
-  /users-nosql:
-    x-swagger-router-controller: users
-    get:
+  # Auth api's
+  /login/token:
+    x-swagger-router-controller: login
+    post:
       tags:
-        - user
-      operationId: getUsersNoSql
-      summary: Get list of user
-      description: Get list of user
+        - login
+      summary: Returns access token
+      description: Returns access token.
+      operationId: tokenGet
+      parameters:
+        - name: body
+          required: true
+          in: body
+          schema:
+            $ref: '#/definitions/AuthTokenRequest'
       responses:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/UserListResponse"
+            allOf:
+              - $ref: "#/definitions/SuccessResponse"
+              - properties:
+                  data:
+                    type: object
+                    items:
+                      $ref: "#/definitions/AuthTokenResponse"
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /users-sql:
+
+  # User api's
+  /user:
+    x-swagger-router-controller: users
+    post:
+      tags:
+        - user
+      operationId: userCreate
+      summary: Create a user
+      description: Create a new user to the system.
+      parameters:
+        - name: body
+          required: true
+          in: body
+          schema:
+            $ref: '#/definitions/CreateUserRequest'
+      responses:
+        '200':
+          description: Create user success.
+          schema:
+            allOf:
+              - $ref: "#/definitions/SuccessResponse"
+              - properties:
+                  data:
+                    type: object
+                    items:
+                      $ref: "#/definitions/UserResponse"
+        default:
+          description: An error occurred
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+  /users:
     x-swagger-router-controller: users
     get:
       tags:
         - user
-      operationId: getUsersSql
-      summary: Get list of user with SQL Query
+      operationId: getUsers
+      summary: Get list of user
       description: Get list of user
       responses:
         "200":
@@ -62,14 +112,53 @@ paths:
       description: Get an user details
       parameters:
         - name: userId
-          type: string
+          type: number
           required: true
           in: path
       responses:
-        "200":
-          description: Success
+        '200':
+          description: Get user details successfully
           schema:
-            $ref: "#/definitions/SuccessResponse"
+            allOf:
+              - $ref: "#/definitions/SuccessResponse"
+              - properties:
+                  data:
+                    type: object
+                    items:
+                      $ref: "#/definitions/UserResponse"
+        default:
+          description: An error occurred
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+    put:
+      tags:
+        - user
+      operationId: updateUser
+      security:
+        - eternus_jwt_bearer: []
+      summary: Update user to account
+      description: Update user to account.
+      parameters:
+        - name: userId
+          type: number
+          required: true
+          in: path
+        - name: body
+          required: true
+          in: body
+          schema:
+            $ref: '#/definitions/UpdateUserRequest'
+      responses:
+        '200':
+          description: User update success.
+          schema:
+            allOf:
+              - $ref: "#/definitions/SuccessResponse"
+              - properties:
+                  data:
+                    type: object
+                    items:
+                      $ref: "#/definitions/UserResponse"
         default:
           description: An error occurred
           schema:
@@ -79,6 +168,29 @@ paths:
 
 # complex objects have schema definitions
 definitions:
+  CreateUserRequest:
+    required:
+      - first_name
+      - last_name
+      - email
+      - password
+    properties:
+      first_name:
+        type: string
+        pattern: ^(?=.*\w).*$
+        description: User's first name
+      last_name:
+        type: string
+        pattern: ^(?=.*\w).*$
+        description: User's last name
+      email:
+        type: string
+        format: email
+        description: User's email address
+      password:
+        type: string
+        pattern: ^(?=.*\w).*$
+        description: User's password
   UserListResponse:
     required:
       - statusCode
@@ -104,30 +216,82 @@ definitions:
               $ref: '#/definitions/UserResponse'
   UserResponse:
     properties:
-      id:
-        description: User's id
-        type: number
-      name:
-        description: User's name
+      first_name:
+        description: User's first name
         type: string
+      last_name:
+        description: User's last name
+        type: string
+      username:
+        description: User's username
+        type: ["string","null"]
       email:
-        description: User's emai
+        description: User's email address
+        type: ["string","null"]
+      facebook_id:
+        description: A facebook identifier for a user
+        type: ["number", "null"]
+      google_id:
+        description: A facebook identifier for a user
+        type: ["number", "null"]
+      created_on:
+        description: User's created date
         type: string
-      createdAt:
-        description: User's created at
+  UpdateUserRequest:
+   required:
+      - first_name
+      - last_name
+   properties:
+      first_name:
         type: string
-      updatedAt:
-        description: User's updated at
+        description: User's name
+      last_name:
         type: string
+        description: User's name
+  AuthTokenRequest:
+    required:
+      - email
+      - password
+    properties:
+      email:
+        description: Email address of user.
+        type: string
+      password:
+        description: A password of user.
+        type: string
+  AuthTokenResponse:
+    required:
+      - token
+      - expires_in
+    properties:
+      token:
+        type: string
+        description: The token used for granting access.
+      expires_in:
+        type: integer
+        format: int64
+        description: Number of seconds before the token expires.
   SuccessResponse:
     required:
+      - statusCode
       - message
+      - data
     properties:
+      statusCode:
+        type: number
       message:
         type: string
+      data:
+        type: ["array", "object"]
   ErrorResponse:
     required:
+      - statusCode
+      - error
       - message
     properties:
+      statusCode:
+        type: number
+      error:
+        type: string
       message:
         type: string
